# certinize-blockchain-api

./: .env.example  .flake8  Makefile  README.md  pyproject.toml  requirements.txt
app/: bindings.py  dependencies.py  errors.py  events.py  exceptions.py  main.py  middlewares.py  models.py  server.py  services.py  settings.py  types.py
app/templates/: emails.py
app/utils/: crypto.py  metadata.py  requests.py
